--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "test" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "test" ]
 
 jobs:
   build:
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install dependancies
-      run: sudo apt-get install -y libgtk-3-dev autoconf automake autopoint gettext geany-common
+      run: sudo apt-get install -y libgtk-3-dev autoconf automake autopoint gettext geany-dev
     - name: make
       run: make
     #- name: make check
