--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install dependancies
-      run: sudo apt-get install -y libgtk-3-dev autoconf automake autopoint gettext geany-dev
+      run: sudo apt-get install -y libgtk-3-dev autoconf automake autopoint gettext geany
     - name: make
       run: make
     #- name: make check
